--- a/src/main/resources/com/example/librarymanagement/staff-management.fxml
+++ b/src/main/resources/com/example/librarymanagement/staff-management.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.StaffManagementView">
    <center>
-      <TableView fx:id="tVStaff" BorderPane.alignment="TOP_CENTER">
+      <TableView fx:id="tVStaff" onMouseClicked="#handleRowSelect" BorderPane.alignment="TOP_CENTER">
          <columns>
             <TableColumn fx:id="idCol" prefWidth="57.0" text="ID" />
             <TableColumn fx:id="nameCol" prefWidth="252.0" text="Tên nhân viên" />
@@ -71,7 +71,7 @@
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="bEdit" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" text="Sửa thông tin nhân viên" GridPane.rowIndex="1">
+                        <Button fx:id="bEdit" mnemonicParsing="false" onAction="#onEditButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Sửa thông tin nhân viên" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
@@ -97,7 +97,7 @@
                               <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Button fx:id="bFind" mnemonicParsing="false" prefWidth="150.0" text="Tìm kiếm" GridPane.columnIndex="1">
+                        <Button fx:id="bFind" mnemonicParsing="false" onAction="#onFindButtonStaffClick" prefWidth="150.0" text="Tìm kiếm" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
