--- a/src/main/resources/com/example/librarymanagement/book-management.fxml
+++ b/src/main/resources/com/example/librarymanagement/book-management.fxml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.StaffManagementView">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.BookManagementView">
    <center>
-      <TableView fx:id="tVStaff" onMouseClicked="#handleRowSelect" BorderPane.alignment="TOP_CENTER">
-         <columns>
-            <TableColumn fx:id="idCol" prefWidth="57.0" text="ID" />
-            <TableColumn fx:id="nameCol" prefWidth="252.0" text="TÊN NHÂN VIÊN" />
-            <TableColumn fx:id="addressCol" prefWidth="254.0" text="ĐỊA CHỈ" />
-            <TableColumn fx:id="emailCol" prefWidth="163.0" text="EMAIL" />
-            <TableColumn fx:id="phoneNumberCol" prefWidth="223.0" text="SỐ ĐIỆN THOẠI" />
-            <TableColumn fx:id="roleCol" prefWidth="153.0" text="CHỨC VỤ" />
-         </columns>
+      <TableView fx:id="tVBook" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="idCol" prefWidth="75.0" text="ID" />
+          <TableColumn fx:id="nameCol" prefWidth="75.0" text="TÊN SÁCH" />
+            <TableColumn fx:id="authorCol" prefWidth="75.0" text="TÁC GIẢ" />
+            <TableColumn fx:id="categoryCol" prefWidth="75.0" text="THỂ LOẠI" />
+            <TableColumn fx:id="publishingCompanyCol" prefWidth="75.0" text="NHÀ XUẤT BẢN" />
+            <TableColumn fx:id="publishingYearCol" prefWidth="75.0" text="NĂM XUẤT BẢN" />
+            <TableColumn fx:id="reprintTimesCol" prefWidth="75.0" text="LẦN XUẤT BẢN" />
+            <TableColumn fx:id="numberOfBookCol" prefWidth="75.0" text="SỐ LƯỢNG" />
+        </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
@@ -24,14 +29,14 @@
    </center>
    <right>
       <GridPane prefHeight="761.0" prefWidth="397.0" BorderPane.alignment="CENTER">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="568.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="372.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="568.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="372.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
             <HBox alignment="CENTER" prefHeight="77.0" prefWidth="377.0">
                <children>
@@ -43,23 +48,8 @@
                </children>
             </HBox>
             <GridPane prefHeight="134.0" prefWidth="397.0" GridPane.rowIndex="2">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints maxHeight="136.0" minHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
-               </rowConstraints>
                <children>
                   <GridPane alignment="CENTER" prefHeight="112.0" prefWidth="397.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
                      <children>
                         <Button fx:id="bAdd" mnemonicParsing="false" onAction="#onAddButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Thêm nhân viên">
                            <GridPane.margin>
@@ -82,15 +72,16 @@
                            </GridPane.margin>
                         </Button>
                      </children>
-                  </GridPane>
-                  <GridPane GridPane.rowIndex="1">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="275.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="122.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
+                  </GridPane>
+                  <GridPane GridPane.rowIndex="1">
                      <children>
                         <TextField fx:id="tFFind" promptText="Nhập mã số hoặc tên cần tìm kiếm">
                            <GridPane.margin>
@@ -103,14 +94,28 @@
                            </GridPane.margin>
                         </Button>
                      </children>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="275.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="122.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                   </GridPane>
                </children>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="136.0" minHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+               </rowConstraints>
             </GridPane>
-            <ScrollPane prefHeight="486.0" prefWidth="397.0" GridPane.rowIndex="1">
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <content>
-                  <VBox prefHeight="491.0" prefWidth="377.0">
+                  <VBox prefHeight="560.0" prefWidth="377.0">
                      <children>
-                        <Label text="Mã nhân viên">
+                        <Label text="Mã sách">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -118,25 +123,25 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFId" disable="true" opacity="0.5">
+                        <TextField fx:id="tFId" disable="true">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Tên nhân viên *">
+                        <Label text="Tên sách*">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets left="10.0" />
+                              <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFName" promptText="Nhập tên nhân viên">
+                        <TextField fx:id="tFName">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Tên đăng nhập *">
+                        <Label text="Tác giả">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -144,12 +149,12 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFUsername" promptText="Nhập tên đăng nhập">
+                        <TextField fx:id="tFAuthor">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Mật khẩu *">
+                        <Label text="Thể loại">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -157,25 +162,12 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <PasswordField fx:id="tFPassword" promptText="Nhập mật khẩu">
-                           <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" />
-                           </VBox.margin>
-                        </PasswordField>
-                        <Label text="Địa chỉ">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextField fx:id="tFAddress" promptText="Nhập địa chỉ">
+                        <TextField fx:id="tFCategory">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Email">
+                        <Label text="Nhà xuất bản">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -183,12 +175,12 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFEmail" promptText="Nhập email">
+                        <TextField fx:id="tFPublishingCompany">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Số điện thoại">
+                        <Label text="Năm xuất bản">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -196,24 +188,37 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFPhoneNumber" promptText="Nhập số điện thoại">
+                        <TextField fx:id="tFPublishingYear">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label text="Chức vụ">
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </VBox.margin>
+                        <Label text="Lần xuất bản">
                            <font>
                               <Font size="18.0" />
                            </font>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
                         </Label>
-                        <ComboBox fx:id="cBRole" prefHeight="40.0" prefWidth="356.0">
+                        <TextField fx:id="tFReprintTimes">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
-                        </ComboBox>
+                        </TextField>
+                        <Label text="Số lượng*">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="tFNumberOfBook">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </TextField>
                      </children>
                   </VBox>
                </content>
