--- a/src/main/resources/com/example/librarymanagement/staff-management.fxml
+++ b/src/main/resources/com/example/librarymanagement/staff-management.fxml
@@ -122,6 +122,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Tên nhân viên *">
                            <font>
@@ -135,6 +138,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Tên đăng nhập *">
                            <font>
@@ -148,6 +154,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Mật khẩu *">
                            <font>
@@ -161,6 +170,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </PasswordField>
                         <Label text="Địa chỉ">
                            <font>
@@ -174,6 +186,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Email">
                            <font>
@@ -187,6 +202,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Số điện thoại">
                            <font>
@@ -200,6 +218,9 @@
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
                         </TextField>
                         <Label text="Chức vụ">
                            <VBox.margin>
