--- a/src/main/resources/com/example/librarymanagement/reader-management.fxml
+++ b/src/main/resources/com/example/librarymanagement/reader-management.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.StaffManagementView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.ReaderManagementView">
    <center>
-      <TableView fx:id="tVStaff" onMouseClicked="#handleRowSelect" BorderPane.alignment="TOP_CENTER">
-         <columns>
-            <TableColumn fx:id="idCol" prefWidth="57.0" text="MÃ NHÂN VIÊN" />
-            <TableColumn fx:id="nameCol" prefWidth="252.0" text="TÊN NHÂN VIÊN" />
-            <TableColumn fx:id="addressCol" prefWidth="254.0" text="ĐỊA CHỈ" />
-            <TableColumn fx:id="emailCol" prefWidth="163.0" text="EMAIL" />
-            <TableColumn fx:id="phoneNumberCol" prefWidth="223.0" text="SỐ ĐIỆN THOẠI" />
-            <TableColumn fx:id="roleCol" prefWidth="153.0" text="CHỨC VỤ" />
-         </columns>
+         <TableView fx:id="tVReader" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="idCol" prefWidth="75.0" text="MÃ ĐỘC GIẢ" />
+          <TableColumn fx:id="nameCol" prefWidth="75.0" text="TÊN ĐỘC GIẢ" />
+            <TableColumn fx:id="addressCol" prefWidth="75.0" text="ĐỊA CHỈ" />
+            <TableColumn fx:id="emailCol" prefWidth="75.0" text="EMAIL" />
+            <TableColumn fx:id="phoneNumberCol" prefWidth="75.0" text="SỐ ĐIỆN THOẠI" />
+            <TableColumn fx:id="expiryCol" prefWidth="75.0" text="HẠN SỬ DỤNG" />
+            <TableColumn fx:id="lockCol" prefWidth="75.0" text="TRẠNG THÁI" />
+        </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
@@ -24,14 +27,14 @@
    </center>
    <right>
       <GridPane prefHeight="761.0" prefWidth="397.0" BorderPane.alignment="CENTER">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="568.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="372.0" minHeight="10.0" prefHeight="166.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="622.0" minHeight="10.0" prefHeight="521.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="372.0" minHeight="10.0" prefHeight="207.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
             <HBox alignment="CENTER" prefHeight="77.0" prefWidth="377.0">
                <children>
@@ -42,57 +45,51 @@
                   </Label>
                </children>
             </HBox>
-            <GridPane prefHeight="134.0" prefWidth="397.0" GridPane.rowIndex="2">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints maxHeight="136.0" minHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
-               </rowConstraints>
+            <GridPane prefHeight="200.0" prefWidth="397.0" GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="157.0" minHeight="10.0" prefHeight="111.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
                   <GridPane alignment="CENTER" prefHeight="112.0" prefWidth="397.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
                      <children>
-                        <Button fx:id="bAdd" mnemonicParsing="false" onAction="#onAddButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Thêm nhân viên">
+                        <Button fx:id="bAdd" mnemonicParsing="false" onAction="#onAddButtonReaderClick" prefHeight="40.0" prefWidth="180.0" text="Thêm độc giả">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="bSave" mnemonicParsing="false" onAction="#onSaveButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Lưu thông tin nhân viên" GridPane.columnIndex="1">
+                        <Button fx:id="bSave" mnemonicParsing="false" onAction="#onSaveButtonReaderClick" prefHeight="40.0" prefWidth="180.0" text="Lưu thông tin độc giả" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="bEdit" mnemonicParsing="false" onAction="#onEditButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Sửa thông tin nhân viên" GridPane.rowIndex="1">
+                        <Button fx:id="bEdit" mnemonicParsing="false" onAction="#onEditButtonReaderClick" prefHeight="40.0" prefWidth="180.0" text="Sửa thông tin độc giả" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="bDelete" mnemonicParsing="false" onAction="#onDeleteButtonStaffClick" prefHeight="40.0" prefWidth="180.0" text="Xóa nhân viên" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Button fx:id="bDelete" mnemonicParsing="false" onAction="#onDeleteButtonReaderClick" prefHeight="40.0" prefWidth="180.0" text="Xóa độc giả" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
                      </children>
-                  </GridPane>
-                  <GridPane GridPane.rowIndex="1">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="275.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="122.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
+                  </GridPane>
+                  <GridPane GridPane.rowIndex="2">
                      <children>
-                        <TextField fx:id="tFFind" promptText="Nhập mã số hoặc tên cần tìm kiếm">
+                        <TextField fx:id="tFFind" promptText="Nhập mã số, tên cần tìm kiếm">
                            <GridPane.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                            </GridPane.margin>
@@ -103,22 +100,34 @@
                            </GridPane.margin>
                         </Button>
                      </children>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="275.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="122.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                   </GridPane>
+                  <Button fx:id="bExtend" mnemonicParsing="false" onAction="#onExtendButtonReaderClick" prefHeight="40.0" prefWidth="388.0" text="Gia hạn" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
             </GridPane>
-            <ScrollPane prefHeight="486.0" prefWidth="397.0" GridPane.rowIndex="1">
+            <ScrollPane prefHeight="190.0" prefWidth="397.0" GridPane.rowIndex="1">
                <content>
-                  <VBox prefHeight="491.0" prefWidth="377.0">
+                  <VBox prefHeight="504.0" prefWidth="377.0">
                      <children>
-                        <Label text="Mã nhân viên">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
+                        <Label text="Mã độc giả">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
                         </Label>
-                        <TextField fx:id="tFId" disable="true" opacity="0.5">
+                        <TextField fx:id="tFId" disable="true">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
@@ -126,23 +135,7 @@
                               <Font size="16.0" />
                            </font>
                         </TextField>
-                        <Label text="Tên nhân viên *">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextField fx:id="tFName" promptText="Nhập tên nhân viên">
-                           <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" />
-                           </VBox.margin>
-                           <font>
-                              <Font size="16.0" />
-                           </font>
-                        </TextField>
-                        <Label text="Tên đăng nhập *">
+                        <Label text="Tên độc giả *">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -150,7 +143,7 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="tFUsername" promptText="Nhập tên đăng nhập">
+                        <TextField fx:id="tFName" promptText="Nhập tên độc giả">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
@@ -158,29 +151,13 @@
                               <Font size="16.0" />
                            </font>
                         </TextField>
-                        <Label text="Mật khẩu *">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </VBox.margin>
-                        </Label>
-                        <PasswordField fx:id="tFPassword" promptText="Nhập mật khẩu">
-                           <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" />
-                           </VBox.margin>
-                           <font>
-                              <Font size="16.0" />
-                           </font>
-                        </PasswordField>
                         <Label text="Địa chỉ">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
                         </Label>
                         <TextField fx:id="tFAddress" promptText="Nhập địa chỉ">
                            <VBox.margin>
@@ -191,12 +168,12 @@
                            </font>
                         </TextField>
                         <Label text="Email">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
                         </Label>
                         <TextField fx:id="tFEmail" promptText="Nhập email">
                            <VBox.margin>
@@ -207,12 +184,12 @@
                            </font>
                         </TextField>
                         <Label text="Số điện thoại">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
                         </Label>
                         <TextField fx:id="tFPhoneNumber" promptText="Nhập số điện thoại">
                            <VBox.margin>
@@ -222,7 +199,7 @@
                               <Font size="16.0" />
                            </font>
                         </TextField>
-                        <Label text="Chức vụ">
+                        <Label text="Hạn sử dụng">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
@@ -230,11 +207,30 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="cBRole" prefHeight="40.0" prefWidth="356.0">
+                        <TextField fx:id="tFExpiry" disable="true">
                            <VBox.margin>
                               <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
-                        </ComboBox>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </TextField>
+                        <Label text="Trạng thái">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tFLock" disable="true">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </TextField>
                      </children>
                   </VBox>
                </content>
