Done login and menu

--- a/src/main/resources/com/example/librarymanagement/login.fxml
+++ b/src/main/resources/com/example/librarymanagement/login.fxml
@@ -1,49 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="358.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="CENTER" prefHeight="300.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.librarymanagement.view.LoginView">
    <children>
-      <Label prefHeight="53.0" prefWidth="326.0" text="ANTEIKU LIBRARY" textAlignment="RIGHT" textFill="#dd1313" textOverrun="CLIP">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-      </Label>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <GridPane alignment="CENTER" prefHeight="102.0" prefWidth="666.0" GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="40.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="67.0" valignment="CENTER" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <GridPane prefHeight="78.0" prefWidth="541.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="10.0" prefWidth="184.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="357.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label text="Tên đăng nhập">
+                  <Label fx:id="lStatus" textFill="#a81212">
                      <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label text="Mật khẩu" GridPane.rowIndex="1">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <TextField prefHeight="36.0" prefWidth="357.0" GridPane.columnIndex="1" />
-                  <PasswordField prefHeight="36.0" prefWidth="357.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Font size="18.0" />
+                     </font></Label>
                </children>
-            </GridPane>
+            </HBox>
+            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <Button fx:id="bLogin" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="46.0" prefWidth="754.0" styleClass="bLogin" text="ĐĂNG NHẬP">
+                     <HBox.margin>
+                        <Insets left="30.0" right="30.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-         <VBox.margin>
-            <Insets bottom="30.0" top="30.0" />
-         </VBox.margin>
+      </GridPane>
+      <GridPane alignment="CENTER" prefHeight="78.0" prefWidth="541.0" GridPane.rowIndex="1">
+         <children>
+            <Label text="Tên đăng nhập">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="30.0" right="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label text="Mật khẩu" GridPane.rowIndex="1">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="30.0" right="10.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="tFUsername" prefHeight="36.0" prefWidth="357.0" promptText="Nhập tên đăng nhập" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="30.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font></TextField>
+            <PasswordField fx:id="tFPassword" prefHeight="36.0" prefWidth="357.0" promptText="Nhập mật khẩu" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="30.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font></PasswordField>
+         </children>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="337.0" minWidth="10.0" prefWidth="208.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="458.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <HBox alignment="CENTER" prefHeight="148.0" prefWidth="666.0">
+         <children>
+            <Label prefHeight="53.0" prefWidth="326.0" text="ANTEIKU LIBRARY" textAlignment="RIGHT" textFill="#dd1313" textOverrun="CLIP">
+               <font>
+                  <Font name="System Bold" size="36.0" />
+               </font>
+            </Label>
+         </children>
       </HBox>
-      <Button mnemonicParsing="false" prefHeight="57.0" prefWidth="540.0" styleClass="bLogin" text="ĐĂNG NHẬP" />
    </children>
-</VBox>
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="154.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="206.0" minHeight="10.0" prefHeight="113.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+</GridPane>
